--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,4 +1,3 @@
-@import '../../../node_modules/breakpoint-sass/stylesheets/breakpoint';
 
 $breakpoint-desktop: 992px;
 $breakpoint-tablet: 768px;
@@ -19,12 +18,12 @@ $breakpoint-tablet: 768px;
   padding-right: var(--container-padding);
   margin: auto;
 
-  @include breakpoint($breakpoint-tablet) {
+  @media (min-width: 768px) {
     --container-padding: 40px;
     --max-width: 690px;
   }
 
-  @include breakpoint($breakpoint-desktop) {
+  @media (min-width: 992px) {
     --container-padding: 0px;
     --max-width: 740px;
   }
