--- a/src/components/TextInput.module.css
+++ b/src/components/TextInput.module.css
@@ -8,11 +8,12 @@
 
   font-size: 20px;
   font-weight: 700;
+  font-family: inherit;
   line-height: 24px;
 
   border-radius: 16px;
-  color: var(--text-input-color-light);
-  background-color: var(--text-input-bg-color-light);
+  color: var(--text-input-color);
+  background-color: var(--text-input-bg-color);
   outline: none;
   border: none;
 }
@@ -27,13 +28,6 @@
 
 .invalid {
   outline: 1px solid var(--color-red);
-}
-
-@media (prefers-color-scheme: dark) {
-  .input {
-    background-color: var(--text-input-bg-color-dark);
-    color: var(--text-input-color-dark);
-  }
 }
 
 .icon {
