--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -6,5 +6,12 @@
 
 a {
   color: inherit;
+  font-family: inherit;
+  font-size: inherit;
   text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
