--- a/src/components/TextInput/TextInput.module.scss
+++ b/src/components/TextInput/TextInput.module.scss
@@ -3,10 +3,10 @@
 }
 
 .input {
-  padding: 20px 20px 20px 24px;
+  padding: 1em 1em 1em 24px;
   width: 100%;
 
-  font-size: 20px;
+  font-size: clamp(1rem, 1vw + 0.8rem, 1.25rem);
   font-weight: 700;
   font-family: inherit;
   line-height: 24px;
@@ -38,8 +38,8 @@
 }
 
 .error {
-  margin-top: 8px;
   min-height: 24px;
-  font-size: 20px;
   color: var(--color-red);
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
