--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,4 +1,3 @@
-
 $breakpoint-desktop: 992px;
 $breakpoint-tablet: 768px;
 
@@ -7,25 +6,18 @@ $breakpoint-tablet: 768px;
   --tablet-max-width: 690px;
   --mobile-max-width: 327px;
 
-  --container-padding: 24px;
+  --container-padding: clamp(1.5rem, 4.1vw + 0.5rem, 2.5rem);
 
   --max-width: var(--mobile-max-width);
 }
 
 .container {
-  max-width: calc(var(--max-width) + calc(var(--container-padding) * 2));
   padding-left: var(--container-padding);
   padding-right: var(--container-padding);
   margin: auto;
 
-  @media (min-width: 768px) {
-    --container-padding: 40px;
-    --max-width: 690px;
-  }
-
   @media (min-width: 992px) {
-    --container-padding: 0px;
-    --max-width: 740px;
+    max-width: 780px;
   }
 }
 
