--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -35,12 +35,22 @@ html {
 
   --text-secondary: hsl(0, 0%, 46%);
 
+  --horizontal-line-bg-color: var(--color-gray-200);
+  --vertical-line-bg-color: var(--color-gray-200);
+
+  // play button
+  --play-button-circle-bg-color: hsl(273, 84%, 90%);
+  --play-button-arrow-bg-color: hsl(274, 82%, 60%);
+  --play-button-circle-bg-color-active: hsl(274, 82%, 60%);
+  --play-button-arrow-bg-color-active: var(--color-white);
+
   &.dark {
     --body-bg: var(--color-gray-900);
     --color: var(--color-white);
     --text-input-bg-color: var(--color-gray-800);
     --text-input-color:  var(--color-white);
     --select-optionslist-bg: var(--color-gray-800);
+    --horizontal-line-bg-color: hsl(0, 0%, 59%);
   }
 }
 
