--- a/src/partials/WordDefinition/WordDefinition.module.scss
+++ b/src/partials/WordDefinition/WordDefinition.module.scss
@@ -14,8 +14,8 @@
 }
 
 .play {
-    // width: clamp(3rem, 6.9vw + 1.4rem, 4.7rem);
-    // height: auto;
+    width: clamp(3rem, 6.9vw + 1.4rem, 4.7rem);
+    height: auto;
 }
 
 .leftside {
