--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -9,6 +9,10 @@ a {
   font-family: inherit;
   font-size: inherit;
   text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 img {
