--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -2,47 +2,59 @@ $breakpoint-desktop: 992px;
 $breakpoint-tablet: 768px;
 
 :root {
-  --desktop-max-width: 740px;
-  --tablet-max-width: 690px;
-  --mobile-max-width: 327px;
+	--desktop-max-width: 740px;
+	--tablet-max-width: 690px;
+	--mobile-max-width: 327px;
 
-  --container-padding: clamp(1.5rem, 4.1vw + 0.5rem, 2.5rem);
+	--container-padding: clamp(1.5rem, 4.1vw + 0.5rem, 2.5rem);
 
-  --max-width: var(--mobile-max-width);
+	--max-width: var(--mobile-max-width);
 }
 
 .container {
-  padding-left: var(--container-padding);
-  padding-right: var(--container-padding);
-  margin: auto;
+	padding-left: var(--container-padding);
+	padding-right: var(--container-padding);
+	margin: auto;
 
-  @media (min-width: 992px) {
-    max-width: 780px;
-  }
+	@media (min-width: 992px) {
+		max-width: 780px;
+	}
 }
 
 .flex {
-  display: flex;
+	display: flex;
 }
 
 .flex-col {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .items-center {
-  align-items: center;
+	align-items: center;
 }
 
 .mr-22 {
-  margin-right: 22px;
+	margin-right: 22px;
 }
 
 .mblock-20 {
-  margin-top: 20px;
-  margin-bottom: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .mb-25 {
-  margin-bottom: 25px;
+	margin-bottom: 25px;
+}
+
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
 }
